// Copyright (C) 2016 Nippon Telegraph and Telephone Corporation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
// implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package portservice;

import "port.proto";

service Port {
    rpc Init(port.InitRequest) returns (port.InitResponse) {}
    rpc Clear(port.ClearRequest) returns (port.ClearResponse) {}
    rpc Probe(port.ProbeRequest) returns (port.ProbeResponse) {}
    rpc Detach(port.DetachRequest) returns (port.DetachResponse) {}
    rpc GetConfig(port.GetConfigRequest) returns (port.GetConfigResponse) {}
    rpc GetPortName(port.GetPortNameRequest) returns (port.GetPortNameResponse) {}
//    rpc PortEnableSet(port.PortEnableSetRequest) returns (port.PortEnableSetResponse) {}
//    rpc PortEnableGet(port.PortEnableGetRequest) returns (port.PortEnableGetResponse) {}
//    rpc PortAdvertSet(port.PortAdvertSetRequest) returns (port.PortAdvertSetResponse) {}
//    rpc PortAbilityAdvertSet(port.PortAbilityAdvertSetRequest) returns (port.PortAbilityAdvertSetResponse) {}
//    rpc PortAdvertGet(port.PortAdvertGetRequest) returns (port.PortAdvertGetResponse) {}
//    rpc PortAbilityAdvertGet(port.PortAbilityAdvertGetRequest) returns (port.PortAbilityAdvertGetResponse) {}
//    rpc PortAdvertRemoteGet(port.PortAdvertRemoteGetRequest) returns (port.PortAdvertRemoteGetResponse) {}
//    rpc PortAbilityRemoteGet(port.PortAbilityRemoteGetRequest) returns (port.PortAbilityRemoteGetResponse) {}
//    rpc PortAbilityGet(port.PortAbilityGetRequest) returns (port.PortAbilityRemoteGetResponse) {}
//    rpc PortAbilityLocalGet(port.PortAbilityLocalGetRequest) returns (port.PortAbilityLocalGetResponse) {}
//    rpc PortUntaggedVlanSet(port.PortUntaggedVlanSetRequest) returns (port.PortUntaggedVlanSetResponse) {}
//    rpc PortUntaggedVlanGet(port.PortUntaggedVlanGetRequest) returns (port.PortUntaggedVlanGetResponse) {}
}
